--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,34 @@
+body {
+    text-align: center;
+}
+
 .App {
+    display: inline-block;
+    margin: 4rem auto;
+}
+
+.App > div > button {
+    font-size: 1rem;
+    padding: .375rem .75rem;
+    margin-bottom: 0;
+
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    line-height: 1.5;
+    border: 1px solid transparent;
+    background-color: #6c757d;
+    color: #fff;
+    margin-left: 15px;
+    border-radius: .25rem;
+    outline: none;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    font-weight: 500;
+}
+
+.App > div > button:hover {
+    background-color: #495057;
 }
